# byte-bin

./: .backup_update  .bash_aliases  .create_all_tocs  .create_toc  .gitignore  .review_files  .trailing_space_dir  .verify_whitespace  11th-hour.py  11th-hour.txt  CLAUDE.md  CMakeLists.txt  CoordinatedLoopingThreadpool.hpp  IMAGE-EXPLORATION.md  Makefile  PHASE7_PERF_TESTING.md  README.md  RESULTS.md  TABLE_OF_CONTENTS.txt  Threaded.cpp  ThreadedSharedMem.hpp  ThreadedWave.hpp  Wave.hpp  WaveGPU.hpp  WaveMPI.hpp  WaveOrthotope.hpp  WaveOrthotopeGPU.cpp  WaveOrthotopeOpenMP.cpp  WaveOrthotopeSharedMem.hpp  WaveSharedMemGPU.hpp  WaveThreaded.hpp  bash_profile.sh  bash_profile_aliases.sh  bashrc.sh  bashrc_update.sh  binary_io.hpp  buildnrun.sh  cartesian_product.hpp  cpp-optimization.txt  create-ts-project.sh  (+13 more)
.ensignhistory/: cleaup-lists.sh  list-files.sh
bld/: CMakeCache.txt  Makefile  cmake_install.cmake  wavesolve_gpu  wavesolve_mpi
cloud-functions/: .firebaserc
cloud-functions/functions/src/: index.ts
docs/: CNAME  README.md  TODO.md  architecture-diagram.md  entity-design-diagram.md  entity-design-sample-data.json  index.html  package-lock.json  package.json  presentation-report.md  script.js  skills-lock.json
docs/delorean/: TODO.md  index.html  report.js  sample-api-data.json  sample-parsed-data.json  script.d.ts  script.js  time-entry.d.ts  time-entry.js  time-entry.ts
docs/delorean/toggl/: .gitignore  README.md  access.js  test.js  test.sh
ref/: tmux.md
shell/: .bash_aliases  create-ts-project.sh  export-aliases.sh  export-src.sh  export_aliases.sh  performance-writeup.md  sizeof_node_modules.sh
